feat: 可執行化起點 app + Phase 2 MySQL 環境與 golden 資料
- run.sh：新增 build/run/test/open/db-reset 指令；自動解析 JDK（優先 openjdk@17，
  支援 JDK=8/17/21 且驗證版本）；JDK9+ 自動帶 --add-opens（Spring4 CGLIB 相容）；
  改為 server ready 後才開瀏覽器再帶回前景；host/port 走 .env（APP_HOST/APP_PORT）
- pom.xml：Spring Framework 4.1.4 → 4.3.30.RELEASE（修 Spring Security 4.1.5
  FilterComparator 需要 CorsFilter，4.1.4 缺此類別導致啟動 NoClassDefFoundError）
- docker-compose.yml + docker/init/01-schema-seed.sql：MySQL 8（native password
  相容舊 Connector/J 5.1.49）+ accounts/transactions schema 與 seed
- docker/golden/reset-to-factory.sql：idempotent 出廠重置（golden baseline，
  可斷言 A001 餘額=1000.00 / A001 交易 3 筆 / 帳戶 4 筆）
- .env.example / .gitignore：機敏值與主機設定走 .env（含 .env 忽略），不入庫

遷移雷全數保留（Struts2/Spring XML/Hibernate4/javax/WebSecurityConfigurerAdapter/JUnit4）。